# content-image-generation-mcp

./: .env.example  .gitignore  DEPLOY_NOW.md  LICENSE  QUICKSTART.md  README.md  TESTING.md  __init__.py  campaign_templates.py  fastmcp.json  json  pyproject.toml  requirements.txt  server.py  test_generation.py
.airtable/: server-metadata.json
.github/workflows/: sync-airtable.yml
airtable-data/: README-AIRTABLE.md  mcp-config.json  server-metadata.json
docs/: .env.staff-hive-social.example  AIRTABLE_AUTOMATION_SCRIPT.js  AIRTABLE_PLATFORM_SPECS.md  AIRTABLE_SOCIAL_POSTS_TABLE.md  AI_DRIVEN_SOCIAL_PIPELINE.md  COMPLETE_AUTOMATION_GUIDE.md  FILE_HOSTING_SOLUTIONS.md  LOGO_OVERLAY_GUIDE.md  SOCIAL_MEDIA_SPECS.md  STAFF_HIVE_SOCIAL_BUILD_PLAN.md  USAGE_EXAMPLES.md  USING_YOUR_BRANDS_TABLE.md  environment-config.json
docs/deployment/: .fastmcp-deployments.json  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUMMARY.md  FASTMCP_CLOUD_DEPLOYMENT.md  QUICK_START.md
scripts/: sync-airtable.py  validate-deployment.sh
tests/: __init__.py  conftest.py  pytest.ini  test_bear.py  test_direct.py  test_server.py
