[project]
name = "marketing-automation-mcp"
version = "0.1.0"
description = "FastMCP server for AI-powered marketing automation with Google Imagen/Veo and Claude/Gemini"
authors = [
    {name = "AI Dev Marketplace", email = "dev@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}

dependencies = [
    "fastmcp>=2.13.0",
    "google-cloud-aiplatform>=1.40.0",
    "anthropic>=0.40.0",
    "google-generativeai>=0.3.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
