[project]
name = "content-image-generation-mcp"
version = "1.0.0"
description = "AI-powered content and image generation with Google Imagen 3/4, Veo 3, and Gemini 2.5 Flash"
authors = [
    {name = "FastMCP Build System"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

# Dependencies match fastmcp.json and requirements.txt
dependencies = [
    "fastmcp>=2.13.0",
    "google-genai>=1.0.0",
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "supabase>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
